# chirpscan_object_detection

./: README.md  pyproject.toml
configs/: mel_spectrogram_config.yaml  spectrogram_config.yaml
scripts/: visualize_boxes.py
src/audio/: coordinates.py  export.py  spectrogram.py
